--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: amaRyaml
 Title: Amarakon's Template 
 Version: 0.0.1
 Authors@R: 
-    person("Amar", "Al-Zubaidi", role = c("aut", "cre")), email = "fraupflaume@gmail.com"
+    person("Amar", "Al-Zubaidi", role = c("aut", "cre"), email = "fraupflaume@gmail.com")
 Description: This template is usable in R Markdown with a preconfigured YAML.
 License: `use_gpl2_license()`
 Encoding: UTF-8
