Change license from GPL-2 to AGPL-3

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: AmaRYAML
 Description: Preconfigured YAML Templates for R Markdown
 Version: 0.0.1
 Authors@R: person("Amar", "Al-Zubaidi", role = c("aut", "cre"), email = "fraupflaume@gmail.com")
-License: `use_gpl2_license()`
+License: `use_agpl3_license()`
 Encoding: UTF-8
 Imports: rmarkdown
 Suggests: knitr, pander, DiagrammeR, DiagrammeRsvg, rsvg
